--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,63 +1,67 @@
 html,
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+	padding: 0;
+	margin: 0;
+	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+		Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+	color: inherit;
+	text-decoration: none;
 }
 
 * {
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 .text-white {
-  color: white;
+	color: white;
 }
 
 .nav-title {
-  cursor: pointer;
-  font-size: max(4vmin, 10px);
-  /* font-size: 2vh; */
-  /* centering vertically */
-  position: absolute;
-  top: 50%;
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
+	cursor: pointer;
+	font-size: max(4vmin, 10px);
+	/* font-size: 2vh; */
+	/* centering vertically */
+	position: absolute;
+	top: 50%;
+	-ms-transform: translateY(-50%);
+	transform: translateY(-50%);
 }
 
 .navigation {
-  position: -webkit-sticky; /* figure out */
-  position: sticky;         /* figure out */
-  background-color: #000;
-  overflow: hidden;
-  padding: 3.5vh;
+	position: -webkit-sticky; /* figure out */
+	position: sticky; /* figure out */
+	background-color: #000;
+	overflow: hidden;
+	padding: 3.5vh;
 }
 
 ul {
-  display: flex;
-  list-style-type: none;
-  text-decoration: none;
-  cursor: pointer;
+	display: flex;
+	list-style-type: none;
+	text-decoration: none;
+	cursor: pointer;
 }
 
 li {
-  margin-left: 2vh;
-  text-decoration: none;
+	margin-left: 2vh;
+	text-decoration: none;
 }
 
 .pull-left {
-  float: left;
+	float: left;
 }
 
 .pull-right {
-  float: right;
+	float: right;
 }
 
 li:hover {
-  color: aqua;
+	color: aqua;
+}
+
+.container {
+	margin: 2vh;
 }
