Added additional functionality to profile page - also implemented Tailwind

--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -1,3 +1,15 @@
+/*
+CTRL + , (VS Code settings)
+Type "unknown"
+CSS -> Lint: Unknown At Rules => choose "ignore"
+
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+*/
+
 html,
 body {
 	padding: 0;
