--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -9,6 +9,10 @@ CSS -> Lint: Unknown At Rules => choose "ignore"
 @tailwind components;
 @tailwind utilities;
 
+html {
+	/* overflow: scroll; /* remove scrollbar */
+}
+
 html,
 body {
 	padding: 0;
